--- a/Server/www/websocket/player.html
+++ b/Server/www/websocket/player.html
@@ -9,7 +9,9 @@
 	<link type="text/css" rel="stylesheet" href="player.css">
     <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script type="text/javascript" src="scripts/webRtcPlayer.js"></script>
+	<script type="text/javascript" src="scripts/device.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
+    
 </head>
 
 <body onload="load()">
