--- a/Server/www/websocket/player.html
+++ b/Server/www/websocket/player.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script type="text/javascript" src="scripts/webRtcPlayer.js"></script>
 	<script type="text/javascript" src="scripts/device.js"></script>
-	  <script type="module" src="scripts/grammar.js"></script>  
+	  <!--<script type="text/javascript" src="scripts/index.js"></script> 
+	  -->
 	<script type="text/javascript" src="scripts/webrtcsdp.js"></script>
 	
     <script type="text/javascript" src="scripts/app.js"></script>
