--- a/Server/www/app/room.html
+++ b/Server/www/app/room.html
@@ -63,9 +63,14 @@
  
  <!-- 首先引入 socket.io 客户端脚本-->
 <script src="/socket.io/socket.io.js"></script>
+
  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+ <script src="./js/AnswerMediaSection.js?version=1"></script>
+ <script src="./js/Transport.js?version=1"></script>
+ <script src="./js/Logger.js?version=1"></script>
+ <script src="./js/OfferMediaSection.js?version=1"></script>
   <script src="./js/client.js?version=1"></script>
-     
+  <script src="./js/RemoteSdp.js?version=1"></script>     
 
 </body>
 
