--- a/Server/www/app/room.html
+++ b/Server/www/app/room.html
@@ -66,6 +66,9 @@
 
  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
  <script src="./js/AnswerMediaSection.js?version=1"></script>
+ <script src="./js/commonSdpUtils.js"></script>
+ <script src="./js/RtcSdp.js?version=1"></script>
+ <script src="./js/Rtc.js?version=1"></script>
  <script src="./js/Transport.js?version=1"></script>
  <script src="./js/Logger.js?version=1"></script>
  <script src="./js/OfferMediaSection.js?version=1"></script>
