--- a/Server/www/rtc/player.html
+++ b/Server/www/rtc/player.html
@@ -20,6 +20,7 @@
 		<!--为button做了点击事件-->
 		<button id="connserver">ConnServer</button>
 		<button id="leave" disabled> Leave</button>
+		<button id="RequestFrame" disabled> requestkeyframe</button>
 		
 	</div>
 	<!--
