--- a/Server/www/rtc/player.html
+++ b/Server/www/rtc/player.html
@@ -4,7 +4,9 @@
 <html>
 
 <head>
- <title> WebRTC peerConnection </title>
+ 
+ 
+ <title> RTC  Player </title>
  <link href="./css/client.css" rel="stylesheet"/>
  
 </head>
@@ -42,7 +44,7 @@
 		<!--
 		  远端视频与Answer的展示区
 		-->
-		<div>
+		<div  id="test_remote" >
 		 <h2>Remote:</h2>
 		 <video id="remotevideo" autoplay playsinline ></video>
 		 <h2>Answer SDP:</h2>
