[Rtc publisher.html]

--- a/Server/www/rtc/publisher.html
+++ b/Server/www/rtc/publisher.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
- <title> WebRTC peerConnection </title>
+ <title> RTC Publiber </title>
  <link href="./css/client.css" rel="stylesheet"/>
  
 </head>
