--- a/Server/www/rtc/player.html
+++ b/Server/www/rtc/player.html
@@ -67,7 +67,7 @@
  <!-- 首先引入 socket.io 客户端脚本-->
 <script src="/socket.io/socket.io.js"></script>
 
- <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+ <script src="./js/adapter-latest.js"></script>
  <!-- <script src="./js/AnswerMediaSection.js?version=1"></script>
  <script src="./js/commonSdpUtils.js"></script>
  <script src="./js/RtcSdp.js?version=1"></script>
