--- a/Server/www/rtc/cloud_player.html
+++ b/Server/www/rtc/cloud_player.html
@@ -8,8 +8,9 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 	<link type="text/css" rel="stylesheet" href="player.css">
     <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-    <script type="text/javascript" src="js/webRtcPlayer.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/webRtcPlayer.js?version=47"></script>
+    <script type="text/javascript" src="js/webRtcDataChannel.js?version=42"></script>
+    <script type="text/javascript" src="js/app.js?version=60"></script>
 </head>
 
 <body onload="load()">
