--- a/Server/www/rtc/cloud_player.html
+++ b/Server/www/rtc/cloud_player.html
@@ -8,16 +8,16 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 	<link type="text/css" rel="stylesheet" href="player.css">
     <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-    <script type="text/javascript" src="js/webRtcPlayer.js?version=47"></script>
-    <script type="text/javascript" src="js/webRtcDataChannel.js?version=42"></script>
-    <script type="text/javascript" src="js/app.js?version=63"></script>
+    <script type="text/javascript" src="js/webRtcPlayer.js?version=44"></script>
+    <script type="text/javascript" src="js/webRtcDataChannel.js?version=44"></script>
+    <script type="text/javascript" src="js/app.js?version=64"></script>
 </head>
 
 <body onload="load()">
 	<div id="playerUI">
 		<div id="player"  ></div>
 		 
-		 <div id="overlay" class="overlay text-light bg-dark">
+		 <div id="overlay" class="overlay text-light bg-dark" style="display: none;">
 			 
 <div>
 				<div id="qualityStatus" class="greyStatus">&#9679</div>
