--- a/Server/www/rtc/cloud_player.html
+++ b/Server/www/rtc/cloud_player.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 	<link type="text/css" rel="stylesheet" href="player.css">
-    <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script type="text/javascript" src="js/adapter-latest.js"></script>
     <script type="text/javascript" src="js/webRtcPlayer.js?version=44"></script>
     <script type="text/javascript" src="js/webRtcDataChannel.js?version=44"></script>
     <script type="text/javascript" src="js/app.js?version=64"></script>
